[package]
name = "web_server"
version = "0.1.0"
authors = ["Hugo-Olivier Monette <hugoo.monettev4si972@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
futures = "0.3.13"